@startuml
!include ../Style.puml
'https://plantuml.com/sequence-diagram

skinparam classFontColor automatic

class AddPromotionCommand #LightPink {
    # promotion : Promotion
    + execute()
}

class Promotionlist #Honeydew {
    - promotions : ArrayList <Promotion>
    + getIndex(promotion : Promotions)
    + itemIsOnPromo(itemName: String)
    + isLeapYear(year: Int)
    + addPromotion(promotion : Promotions)
    + isValidDiscount(discount: Float)
    + isValidTime(startTime: Int, endTime: Int)
    + isValidDuration(...)
    + isValidMonth(date: Int, month: Month, year: Int)
    + getAllPromotion()
}

note right
    Parameters for isValidDuration
    startDate : Int,
    startMonth : Month,
    startYear : Int,
    endDate : Int,
    endMonth : Month,
    endYear : Int
end note


class Promotion #LightBlue {
    # itemName : String
    # discount : Float
    # startDate : Int
    # startMonth : Month
    # startYear : Int
    # endDate : Int
    # endMonth : Month
    # endYear : Int
    # startTime : Int
    # endTime : Int
}

enum Month #LightYellow {
    JAN(1)
    FEB(2)
    MAR(3)
    APR(4)
    MAY(5)
    JUN(6)
    JUL(7)
    AUG(8)
    SEP(9)
    OCT(10)
    NOV(11)
    DEC(12)
}

AddPromotionCommand --> Promotionlist : uses
Promotionlist --> Promotion : 0..*


hide circle
skinparam classAttributeIconSize 0
@enduml